--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="google-site-verification" content="7jrjk8qjZY5p04Pnjl5K7YRGzJXlGCgLKrQ36dYWPJE" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gibson Opoku - CEO of Uflaunt</title>
     <style>
         * {
